# tic_tac_toe_leptos

./: Cargo.toml  package-lock.json  tailwind.config.js
app/: Cargo.toml
app/src/: counter_test.rs  lib.rs  ttt.rs
app/src/ttt/: field.rs  symbol.rs  win.rs
style/: main.scss
